# AutoHireAI

./: README.md
AutoHireAI/: app.py  main.py  pyproject.toml  requirements.txt  test_interview.py
AutoHireAI/routes/: __init__.py  api_routes.py  views.py
AutoHireAI/static/css/: style.css
AutoHireAI/static/js/: script.js
AutoHireAI/templates/: index.html
AutoHireAI/uploads/: Job_Desc.docx
AutoHireAI/utils/: __init__.py  ai_analyzer.py  document_parser.py  email_utils.py  mail_generator.py  nlp_processor.py
